# OpenCADStudio

./: .gitignore  COMMANDS.md  Cargo.toml  HEADER_AUDIT.md  INTEGRATION_GAPS.md  README.md  RENDERING_OPTIMIZATION.md  ROADMAP.md  build.rs
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
crates/ocs_plugin_api/: Cargo.toml  REPORT.md
crates/ocs_plugin_api/src/: host.rs  lib.rs  manifest.rs  process.rs  ribbon.rs  runner.rs
crates/stormsewer/: Cargo.toml  README.md
crates/stormsewer/src/: catchment.rs  (+4 more)
docs/: PR-plugin-host.md  instancing_3_4.md  issue-78-reply.md  issue-78-schoeller-reply.txt  plugin-architecture.md
docs/automation/: README.md  ocs.py
docs/plugin-template/: PLUGIN.md  README.md  dispatch.rs  manifest.rs  mod.rs  plugin.rs  plugin.toml  register.rs
packaging/: OpenCADStudio.desktop
packaging/windows/: main.wxs
plugins/: README.md  registry.json
src/: cli.rs  command.rs  lib.rs  linetypes.rs  main.rs  patreon.rs  profiling.rs  snap.rs  update_check.rs
src/app/: automation.rs  cmd_result.rs  command_driver.rs  commands.rs  document.rs  expr_eval.rs  helpers.rs  history.rs  mod.rs  model_ops.rs  mtext_editor.rs  plugin_host.rs  properties.rs  settings.rs  text_inline.rs  update.rs  view.rs
src/command/: mod.rs
src/entities/: arc.rs  attribute.rs  circle.rs  common.rs  dimension.rs  ellipse.rs  insert.rs  leader.rs  lwpolyline.rs  mesh.rs  mline.rs  mod.rs  mtext.rs  multileader.rs  ole2frame.rs  point.rs  polyline.rs  shape.rs  solid.rs  solid3d.rs  table.rs  text.rs  text_support.rs  tolerance.rs  traits.rs  underlay.rs
src/io/: file_association.rs  mod.rs  paper_sizes.rs  pdf_export.rs  print_to_printer.rs  step.rs  svg.rs
src/modules/: mod.rs  registry.rs
src/plugin/: external.rs  host.rs  manifest.rs  marketplace.rs  mod.rs  registry.rs  smoke.rs
src/scene/: acad_to_truck.rs  acis_to_truck.rs  annotative.rs  block_cache.rs  camera_ops.rs  complex_lt.rs  entity.rs  group_layer.rs  image_model.rs  layout.rs  lff.rs  mesh_model.rs  mesh_tess.rs  mod.rs  model_solid.rs  modify.rs  object.rs  paper.rs  preview.rs  render.rs  selection.rs  solid3d_tess.rs  tessellate.rs  viewport_pane.rs  wire_model.rs  xclip.rs
src/shaders/: hatch.wgsl  hatch_batched.wgsl  mesh.wgsl  wire.wgsl  wire_indexed.wgsl
src/snap/: mod.rs
src/ui/: command_line.rs  dimstyle.rs  isolate_popup.rs  mleaderstyle.rs  mod.rs  overlay.rs  plugin_manager.rs  point_style.rs  properties.rs  statusbar.rs  style_list.rs  style_manager.rs  update_notice.rs
tests/: annotative_context_roundtrip.rs  annotative_context_synthesis.rs  block_hatch_export.rs  boolean_persistence.rs  derived_caches.rs  entity_roundtrip.rs  mesh_persistence.rs  text_font_rendering.rs
(+180 files in other folders)
