[package]
name = "OpenCADStudio"
version = "0.5.0"
edition = "2021"
build = "build.rs"

[workspace]
members = ["crates/stormsewer"]

[dependencies]
# vtkio (pulled in transitively via truck-meshalgo) depends on xz2 → lzma-sys,
# which by default links the system liblzma dynamically. On macOS that bakes a
# Homebrew dylib path (/opt/homebrew/.../liblzma.5.dylib) into the binary, so
# the .app crashes on launch on machines without that exact library (#56).
# Forcing the `static` feature builds liblzma from the bundled source, making
# the binary self-contained on every platform.
lzma-sys = { version = "0.1", features = ["static"] }
iced = { version = "0.14", features = ["debug", "image", "svg", "advanced", "canvas", "smol"] }
bytemuck = { version = "1.25", features = ["derive"] }
glam = { version = "0.33", features = ["bytemuck"] }
truck-modeling = "0.6"
truck-meshalgo = { version = "0.4", default-features = false, features = ["tessellation"] }
truck-polymesh = "0.6"
rfd = "0.17"
acadrust = "0.3.4"
open = "5"
printpdf = "0.9.1"
flate2 = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "tiff"] }
rayon = "1"
ureq = { version = "3", default-features = false, features = ["rustls"] }
inventory = "0.3"
truck-shapeops = "0.4"
# Fast non-cryptographic hasher. Handle/u64 keys dominate the hot block,
# hatch, draw-depth and wire caches; the default SipHash is overkill there.
rustc-hash = "2"
# Storm-sewer hydrology/hydraulics engine (Rational + Manning + HGL). Local
# crate; powers the `storm_sewer` ribbon module.
stormsewer = { path = "crates/stormsewer" }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[patch.crates-io]
# Tracks HakanSeven12/acadrust main, which carries the hatch
# boundary-handle cap, raster-image/wipeout clip-vertex fix, 3DFACE
# Z-decode fix, and CANNOSCALE/CANNOSCALEVALUE header support on top of
# upstream. Revert to upstream once those PRs land.
acadrust = { git = "https://github.com/HakanSeven12/acadrust", rev = "569bd4d75f189abe9c669e22f3de05c2b7b1963a" }  # Pinned per review Issue 3 (2026-06-11). Tracks HakanSeven12/acadrust main (hatch boundary-handle cap, raster-image/wipeout clip-vertex fix, 3DFACE Z-decode fix, CANNOSCALE/CANNOSCALEVALUE header support). Upstream: https://github.com/HakanSeven12/acadrust (main at time of pin 569bd4d7). Revert to crates.io upstream once those PRs land. See HEADER_AUDIT.md. Enables cargo check -p stormsewer. Stormsewer crate has no acadrust dep (top workspace only). Hygiene + repro.
